- VARs: add $fevd accessor to get the forecast error variance
  decomposition as a matrix; also add GUI access to forecast variance
  decomposition plots
- VECMs: add $vecGamma accessor to get the Gamma matrices (coefficients
  on the differences of the system variables) in standard format
- "tobit" command: add options to specify left- and/or right-
  censoring; also add --robust option
- GUI forecast dialog, for cross-sectional data: give option of showing
  confidence interval for mean Y rather than actual Y
- Fix a small memory leak when opening an *.asc data file
- New function colname(): retrieve a column name from a matrix
- New function eigsolve(): solves generalized eigenvalue problem
- New model accessors with string values: $depvar for the name of the
  dependent variable, and $command for the command word used
- Matrix "division": give the operators "\" and "/" the same semantics
  as in Octave/Matlab (left and right division)
- Remove the FGLS "arch" command from the GUI and add a deprecating
  note to its help text
- Lag specification for regressors (e.g. "foo(-1 to -2)"): the name of
  a list can now be substituted for the name of a series
- quantile() function: allow a vector for the second argument when the 
  first argument is a matrix
- Copy data to clipboard in GUI: remove limitation of 8 series max
- "difftest" command: record $test and $pvalue
- Fix bug: wrong out-of-sample forecasts for ARMA models with seasonal
  MA terms
- Fix bug: wrong handling of string fields in ODBC data import
- Fix bug: spurious "unmatched 'if'" error under some conditions
- Fix bug: incorrect handling of observation markers in context of
  scatter plot "with factor separation"
- Fix bug: transposition not being done in expressions of the form
  matrix m = $accessor[range]', with trailing transpose symbol
- Fix bug: usable observations could be omitted when compacting from
  daily to weekly frequency, if the daily data contained "hidden"
  missing observations
